--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <br>
 <header>
+  <br>
   <h1>WELCOME TO BuniniJeany HOME PAGE</h1>
   <h4>‧⋆ ✧˚₊‧⋆. ✧˚₊‧⋆‧₊˚ ✧ ‿︵‿୨୧‿︵‿ ✧ ₊˚ ‧⋆ ✧˚₊‧⋆. ✧˚₊‧⋆‧</h4>
   <br>
-  <h3> BuniniJeany is a mix of 'Newjeans', and their keychain merchandise is called 'Bunini'. 
+  <h3> BuniniJeany is a mix of 'Newjeans' girl kpop group, and their keychain merchandise is called 'Bunini'. 
     It is a collaboration with Line Friend Collection Store.</h3>
     <br>
 </header>
